# urlscannerbot

./: .replit  Dockerfile  LICENSE  config.py  database.py  deepseek_python_20250830_a98c06.py  ma  main.py  pyproject.toml  replit.md  security_bot.db  web_interface.py
handlers/: admin_handler.py  message_handler.py
services/: Database.py  admin_manager.py  cloudflare_radar.py  threat_analyzer.py  url_scanner.py
template/: config.html  docs.html
templates/: base.html  config.html  dashboard.html  docs.html
templates/templates/: base.html
utils/: logger.py  rate_limiter.py  url_detector.py
