[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pytelegrambotapi>=4.28.0",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
     "telegram>=0.0.1",
     "pyTelegramBotAPI>=4.28.0",
         "flask>=3.1.1",
         "watchdog>=6.0.0",
         "psutil",
]
